traversal.snake.Snake.scala.error
Compilation error:
Snake:2: error: type mismatch;
 found   : Unit
 required: Boolean
  gauche(); if (estFaceMur()) {droite();
            ^