traversal.snake.Snake.scala.code
def fin () : Boolean = {
  gauche(); if (estFaceMur()) {droite();
  return getDirection()==Direction.EST && estFaceMur()
}
}

override def run() {
  var d = 1
  while (!fin()){
    baisseBrosse()
    if (!estFaceMur()) {avance()}
    else {
      d match {
      case 1 => gauche();avance();gauche();d=2
      case 2 => droite();avance();droite();d=1
      }}
  }
}